updating package json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stay-on-track",
-  "repository": "COS426-Final-Project",
+  "repository": "https://github.com/tvu20/COS426-Final-Project",
   "version": "0.1.0",
   "title": "PROJECT TITLE HERE",
   "description": "SHORT DESCRIPTION OF PROJECT HERE. ONE TO TWO SENTENCES MAX",
