--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stay-on-track",
   "repository": "https://github.com/tvu20/COS426-Final-Project",
   "version": "0.1.0",
-  "title": "PROJECT TITLE HERE",
+  "title": "Stay on Track",
   "description": "SHORT DESCRIPTION OF PROJECT HERE. ONE TO TWO SENTENCES MAX",
   "keywords": [
     "Princeton",
